--- a/src/app/auth/dashboard/dashboard.component.html
+++ b/src/app/auth/dashboard/dashboard.component.html
@@ -7,19 +7,19 @@
                     <li class="nav-item">
                         <a class="nav-link active" routerLink="/dashboard/home" routerLinkActive="active"
                             [routerLinkActiveOptions]="{ exact: true }">
-                            <i class="bi bi-house-door-fill"></i> Dashboard
+                            <i class="bi bi-house-door-fill"></i> Kontrolni panel
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" routerLink="/dashboard/companies" routerLinkActive="active"
                             [routerLinkActiveOptions]="{ exact: true }">
-                            <i class="bi bi-person-circle"></i> Companies
+                            <i class="bi bi-person-circle"></i> Kompanije
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" routerLink="/dashboard/users" routerLinkActive="active"
                             [routerLinkActiveOptions]="{ exact: true }">
-                            <i class="bi bi-gear-fill"></i> Users
+                            <i class="bi bi-gear-fill"></i> Korisnici
                         </a>
                     </li>
                 </div>
@@ -29,19 +29,19 @@
                     <li class="nav-item">
                         <a class="nav-link" routerLink="/dashboard/barbers" routerLinkActive="active"
                             [routerLinkActiveOptions]="{ exact: true }">
-                            <i class="bi bi-person-circle"></i> Barbers
+                            <i class="bi bi-person-circle"></i> Frizeri
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" routerLink="/dashboard/haircuts" routerLinkActive="active"
                             [routerLinkActiveOptions]="{ exact: true }">
-                            <i class="bi bi-gear-fill"></i> Haircuts
+                            <i class="bi bi-gear-fill"></i> Usluge
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" routerLink="/dashboard/appointments" routerLinkActive="active"
                             [routerLinkActiveOptions]="{ exact: true }">
-                            <i class="bi bi-house-door-fill"></i> Appointments
+                            <i class="bi bi-house-door-fill"></i> Zakazivanja
                         </a>
                     </li>
                 </div>
@@ -66,9 +66,9 @@
                     </li>
                 </div>
 
-                <li class="nav-item">
-                    <a class="nav-link" routerLink="/dashboard/logout" (click)="logout()">
-                        <i class="fa-solid fa-arrow-right-from-bracket"></i> Logout
+                <li class="nav-item border-top mt-2">
+                    <a class="nav-link mt-1" routerLink="/dashboard/logout" (click)="logout()">
+                        <i class="fa-solid fa-arrow-right-from-bracket"></i> Izloguj se
                     </a>
                 </li>
             </ul>
