--- a/src/app/create-barber/create-barber.component.html
+++ b/src/app/create-barber/create-barber.component.html
@@ -1,7 +1,7 @@
 <!-- Glavna sekcija sa pozadinom -->
-<div class="barber-form-bg d-flex justify-content-center align-items-center min-vh-100">
+<div class="barber-form-bg d-flex justify-content-center align-items-center min-vh-100 p-5">
   <!-- Poluprovidna kutija sa formom -->
-  <div class="col-md-6 bg-white bg-opacity-75 p-5 rounded-4 shadow-lg">
+  <div class="col-md-4 bg-white bg-opacity-75 p-5 rounded-4 shadow-lg">
     <h3 class="mb-4 text-center text-primary">Dodaj frizera</h3>
 
     <form #barberForm="ngForm" (ngSubmit)="onSubmit(barberForm)">
