--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,8 @@
         <img src="../assets/logos/profile.png" role="button" data-bs-toggle="dropdown" aria-expanded="false"
           alt="Profile Picture" class="rounded-circle dropdown-toggle" style="width: 35px; height: 35px;">
         <ul class="dropdown-menu">
-          <li><a class="btn dropdown-item" routerLink="/dashboard">Dashboard</a></li>
-          <li><a class="btn dropdown-item" (click)="logout()">Logout</a></li>
+          <li><a class="btn dropdown-item" routerLink="/dashboard">Kontrolni panel</a></li>
+          <li><a class="btn dropdown-item" (click)="logout()">Izloguj se</a></li>
         </ul>
       </div>
       <div *ngIf="!isLoggedIn" class="auth-buttons">
