Added edit and delete for haircuts

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -37,7 +37,7 @@
       <label for="phoneNumber">Telefon:</label>
       <div class="mb-3">
         <input type="text" id="phoneNumber" class="form-control" name="phoneNumber" [(ngModel)]="phoneNumber"
-          placeholder="+381 61 123456" required />
+          placeholder="Primer: +381 61 123456" required />
       </div>
 
       <label for="password">Lozinka:</label>
@@ -46,10 +46,10 @@
           placeholder="Unesite lozinku" required />
       </div>
 
-      <label for="confirmPassword">Password:</label>
+      <label for="confirmPassword">Potvrdi lozinku:</label>
       <div class="mb-3">
         <input type="password" id="confirmPassword" name="confirmPassword" class="form-control"
-          [(ngModel)]="confirmPassword" placeholder="Potvrdi lozinku" required />
+          [(ngModel)]="confirmPassword" required />
       </div>
 
 
