--- a/src/app/company-barbers/company-barbers.component.html
+++ b/src/app/company-barbers/company-barbers.component.html
@@ -91,7 +91,7 @@
           <div>
             <i class="bi bi-person-badge-fill me-2"></i>
             <strong>{{ barber.barberName }}</strong>
-            <small class="text-muted d-block">Kompanija: {{ barber.companyName }}</small>
+            <!-- <small class="text-muted d-block">Kompanija: {{ barber.companyName }}</small> -->
           </div>
           <i class="bi bi-chevron-right"></i>
         </a>
@@ -177,7 +177,7 @@
                   <div class="price">{{ haircut.price | number }} RSD</div>
                 </div>
               </label>
-              <p *ngIf="haircuts?.length === 0" class="text-muted mt-3">Nema definisanih usluga za ovog frizera.</p>
+              <p *ngIf="haircuts?.length === 0" class="text-muted mt-3">Nema definisanih usluga u ovoj kompaniji.</p>
             </div>
           </div>
           <div class="col-md-12 text-center mt-4">
@@ -191,169 +191,3 @@
     </div>
   </div>
 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!-- 
-<div *ngIf="company?.imageUrl?.length > 0" class="container-fluid pt-5 pb-5">
-
-  <div class="container mb-4">
-    <div id="companyCarousel" class="carousel slide" data-bs-ride="carousel">
-      <div class="carousel-inner">
-        <div *ngFor="let image of company.imageUrl; let i = index" class="carousel-item"
-          [ngClass]="{ active: i === 0 }">
-          <img [src]="image" class="d-block w-100 rounded" style="max-height: 400px; object-fit: cover;"
-            [alt]="'Slika ' + i" />
-        </div>
-      </div>
-
-      <button class="carousel-control-prev" type="button" data-bs-target="#companyCarousel" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#companyCarousel" data-bs-slide="next">
-        <span class="carousel-control-next-icon"></span>
-      </button>
-    </div>
-  </div>
-
-  <h2>{{company.companyName}}</h2>
-
-  <div class="row" *ngIf="isLoggedIn && isAdmin && check===false">
-    <h4>Kreiraj vlasnika kompanije</h4>
-    <div class="col">
-      <app-create-company-owner [companyId]="companyId">
-      </app-create-company-owner>
-    </div>
-
-    <div class="packages-container col">
-      <h4>Postojeći vlasnici</h4>
-      <form (ngSubmit)="onSubmitSelectedOwner()" #form="ngForm">
-        <label *ngFor="let owner of owners" class="package-item">
-          <input type="radio" name="selectedOwner" [value]="owner.ownerId" [checked]="selectedOwner === owner.ownerId"
-            (change)="onOwnerSelected(owner.ownerId)" />
-
-          <div class="package-content">
-            <div class="type">{{ owner.email }}</div>
-            <div class="duration">{{ owner.name }}</div>
-            <div class="price">{{ owner.phoneNumber }}</div>
-          </div>
-        </label>
-        <button class="mt-1 btn btn-success" type="submit">Dodeli Vlasnika</button>
-      </form>
-    </div>
-
-  </div>
-
-  <h2>Frizeri u kompaniji</h2>
-  <a *ngIf="isLoggedIn && isOwner" class="btn btn-info mt-3 me-1"
-    [routerLink]="['/create-barber', companyId]">
-    Dodaj frizera
-  </a>
-  <a *ngIf="isLoggedIn && isOwner" class="btn btn-success mt-3"
-    [routerLink]="['/create-haircut', companyId]">
-    Dodaj usluge
-  </a>
-  <ul>
-    <li *ngFor="let barber of barbers">
-      <strong>Frizer : </strong>
-      <a class="btn btn-outline-primary" (click)="onBarberClick(barber.barberId)">
-        {{ barber.barberName }}
-      </a>
-      <br />
-      <strong>Kompanija:</strong> {{ barber.companyName }}
-    </li>
-  </ul>
-
-  <div *ngIf="selectedBarberId" class="mt-3">
-    <h5>Slobodni termini za {{ selectedDate }}</h5>
-
-    <input type="date" [min]="today" [(ngModel)]="selectedDate" (change)="onDateChange()"
-      class="form-control w-25 mb-3" />
-
-
-    <div class="row row-cols-1 row-cols-md-6 g-3">
-      <div class="col" *ngFor="let appointment of freeAppointments">
-        <div class="card h-100 text-center"
-          [ngClass]="{ 'bg-primary text-white': selectedAppointment === appointment.dateAndTime }">
-          <div class="card-body">
-            <h6 class="card-title">
-              {{ appointment.dateAndTime | date:'HH:mm' : 'UTC' }}
-            </h6>
-            <button class="btn btn-light mt-2" (click)="onDatePick(appointment.dateAndTime)">
-              {{ selectedAppointment === appointment.dateAndTime ? 'Izabran termin' : 'Izaberi termin' }}
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="mt-5 pb-5">
-      <form (ngSubmit)="onSubmit()" #companyForm="ngForm" enctype="multipart/form-data">
-        <div class="row gy-4">
-          <div class="col-md-6">
-            <input class="form-control" type="text" name="firstName" placeholder="First Name" [(ngModel)]="firstName">
-          </div>
-          <div class="col-md-6 ">
-            <input class="form-control" type="text" name="lastName" placeholder="Last Name" [(ngModel)]="lastName">
-          </div>
-          <div class="col-md-12">
-            <input class="form-control" type="text" name="email" placeholder=" Email Address" [(ngModel)]="email">
-          </div>
-          <div class="col-md-12">
-            <input class="form-control" type="text" name="phoneNumber" placeholder="Phone Number"
-              [(ngModel)]="phoneNumber">
-          </div>
-          <div class="packages-container">
-            <h5>USLUGE</h5>
-            <form>
-              <label *ngFor="let haircut of haircuts" class="package-item">
-                <input type="radio" name="selectedHaircut" [value]="haircut.haircutId"
-                  [checked]="selectedHaircut === haircut.haircutId" (change)="onHaircutChange(haircut.haircutId)" />
-
-                <div class="package-content">
-                  <div class="type">{{ haircut.haircutType }}</div>
-                  <div class="duration">{{ haircut.duration }} min</div>
-                  <div class="price">{{ haircut.price | number }} RSD</div>
-                </div>
-              </label>
-            </form>
-          </div>
-          <div class="col-md-12 text-center">
-            <button class="form-control" type="submit">Zakazi!</button>
-          </div>
-        </div>
-
-      </form>
-    </div>
-
-
-
-
-
-    <ng-template #noAppointments>
-      <p>Nema slobodnih termina za izabrani datum.</p>
-    </ng-template>
-  </div>
-</div> -->
