--- a/src/app/auth/dashboard/dashboard.component.html
+++ b/src/app/auth/dashboard/dashboard.component.html
@@ -61,7 +61,7 @@
                     <li class="nav-item">
                         <a class="nav-link active" routerLink="/dashboard/reservations" routerLinkActive="active"
                             [routerLinkActiveOptions]="{ exact: true }">
-                            <i class="bi bi-house-door-fill"></i> Reservations
+                            <i class="bi bi-house-door-fill"></i> Rezervacije
                         </a>
                     </li>
                 </div>
